--- a/index.html
+++ b/index.html
@@ -1,142 +1,347 @@
-<!-- 3D Advent Calendar - Fixed Door 1 Image & Christmas Jingle -->
 <!doctype html>
 <html lang="en">
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>3D Advent Calendar</title>
+<title>3D Christmas Advent Calendar</title>
 <style>
-:root{--card-w:960px;--card-h:720px;--door-gap:12px;--door-bg:#6b2b2b;--door-color:#f5e6d6;--gold:#ffd85a;--transition-ms:700ms;}
+:root{
+  --card-w:960px;
+  --card-h:720px;
+  --door-gap:12px;
+  --door-bg:#6b2b2b;
+  --door-color:#f5e6d6;
+  --gold:#ffd85a;
+  --thickness:20px;
+  --transition-ms:800ms;
+}
 *{box-sizing:border-box}
-body{font-family:Inter,system-ui,Segoe UI,Arial;background:linear-gradient(180deg,#0f172a,#071027);min-height:100vh;display:flex;align-items:center;justify-content:center;color:#fff;margin:0;overflow:hidden}
-.scene{width:var(--card-w);height:var(--card-h);perspective:1400px;position:relative}
-.calendar{width:100%;height:100%;border-radius:18px;padding:28px;background:linear-gradient(180deg,#112033 0%, #09141b 100%);box-shadow:0 20px 60px rgba(2,6,23,0.7);transform-style:preserve-3d;transition:transform .15s ease-out;display:flex;flex-direction:column;gap:18px;align-items:center;justify-content:center;position:relative;}
-.header{display:flex;align-items:center;gap:12px}
-.title{font-size:28px;font-weight:700;letter-spacing:1px}
-.subtitle{opacity:.7;font-size:12px}
-.grid{width:calc(100% - 40px);height:calc(100% - 120px);display:grid;grid-template-columns:repeat(5,1fr);grid-template-rows:repeat(5,1fr);gap:var(--door-gap);perspective:800px}
-.door-wrap{position:relative;width:100%;height:100%}
-.door{position:relative;width:100%;height:100%;transform-style:preserve-3d;transform-origin:left center;transition:transform var(--transition-ms) cubic-bezier(.2,.9,.22,1), box-shadow 250ms;cursor:pointer;border:2px solid rgba(255,255,255,0.05);border-radius:8px;background:linear-gradient(180deg,#3b1a1a,#6b2b2b);overflow:hidden}
-.door-face{position:absolute;inset:0;border-radius:8px;display:flex;align-items:center;justify-content:center;backface-visibility:hidden;box-shadow:inset 0 -6px 12px rgba(0,0,0,.35)}
-.door-front{color:var(--door-color);font-weight:800;font-size:28px;letter-spacing:1px;transform:translateZ(12px);transition:box-shadow 500ms ease}
-.door-front .num{pointer-events:none}
-.door-knob{position:absolute;right:10px;top:50%;transform:translateY(-50%);width:10px;height:10px;border-radius:50%;background:#c8a86d;box-shadow:0 2px 6px rgba(0,0,0,.4)}
-.door-back{transform:rotateY(180deg) translateZ(10px);overflow:hidden;border-radius:8px;background:#0b1012;display:flex;align-items:center;justify-content:center;position:absolute;inset:0}
-.door-back img{width:100%;height:100%;object-fit:cover;opacity:1;transition:opacity 500ms ease-in-out;display:block;filter:drop-shadow(0 0 6px #ff0000) drop-shadow(0 0 6px #00ff00)}
-.door.open{transform:rotateY(-160deg) translateZ(-6px);box-shadow:0 12px 40px rgba(0,0,0,.6)}
+body{
+  font-family:Inter,system-ui,Segoe UI,Arial;
+  background:linear-gradient(180deg,#0f172a,#071027);
+  min-height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  color:#fff;
+  margin:0;
+  overflow:hidden;
+}
+.scene{
+  width:var(--card-w);
+  height:var(--card-h);
+  perspective:1400px;
+  position:relative;
+}
+.calendar{
+  width:100%;
+  height:100%;
+  border-radius:18px;
+  padding:28px;
+  background:linear-gradient(180deg,#112033 0%, #09141b 100%);
+  box-shadow:0 20px 60px rgba(2,6,23,0.7);
+  transform-style:preserve-3d;
+  transition:transform .15s ease-out;
+  display:flex;
+  flex-direction:column;
+  gap:18px;
+  align-items:center;
+  justify-content:center;
+}
+.header{
+  display:flex;
+  align-items:center;
+  gap:12px;
+}
+.title{
+  font-size:28px;
+  font-weight:700;
+  letter-spacing:1px;
+}
+.grid{
+  width:calc(100% - 40px);
+  height:calc(100% - 120px);
+  display:grid;
+  grid-template-columns:repeat(5,1fr);
+  grid-template-rows:repeat(5,1fr);
+  gap:var(--door-gap);
+  perspective:1000px;
+}
+.door-wrap{
+  position:relative;
+  width:100%;
+  height:100%;
+  transform-style:preserve-3d;
+}
+.door-content{
+  position:absolute;
+  inset:0;
+  border-radius:8px;
+  overflow:hidden;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  opacity:0;
+  transition:opacity 0.8s ease-in-out 0.2s;
+  background:#0b1012;
+  box-shadow:inset 0 -6px 12px rgba(0,0,0,.35);
+  cursor:pointer;
+}
+.door-wrap.open .door-content{opacity:1}
+.door-content img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  filter:drop-shadow(0 0 6px #ff0000) drop-shadow(0 0 6px #00ff00);
+}
+.door{
+  position:absolute;
+  inset:0;
+  transform-style:preserve-3d;
+  transform-origin:left center;
+  transition:transform var(--transition-ms) cubic-bezier(.2,.9,.22,1);
+  cursor:pointer;
+  border:2px solid rgba(255,255,255,0.05);
+  border-radius:8px;
+}
+.door.open{transform:rotateY(-135deg)}
+.door-front{
+  position:absolute;
+  inset:0;
+  border-radius:8px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  backface-visibility:hidden;
+  background:linear-gradient(180deg,#3b1a1a,#6b2b2b);
+  box-shadow:inset 0 -6px 12px rgba(0,0,0,.35);
+  color:var(--door-color);
+  font-weight:800;
+  font-size:28px;
+  letter-spacing:1px;
+  transform:translateZ(var(--thickness));
+}
+.num{pointer-events:none}
+.door-knob{
+  position:absolute;
+  right:10px;
+  top:50%;
+  transform:translateY(-50%);
+  width:10px;
+  height:10px;
+  border-radius:50%;
+  background:#c8a86d;
+  box-shadow:0 2px 6px rgba(0,0,0,.4);
+}
 .door.open .door-front{box-shadow:0 0 30px rgba(255,210,120,.12), inset 0 -6px 18px rgba(0,0,0,.4)}
 .door.open .door-front.glow{box-shadow:0 0 26px rgba(255,220,120,.45),0 0 60px rgba(255,190,60,.12)}
 .glow-anim{animation:goldPulse 900ms ease-out forwards}
-@keyframes goldPulse{0%{box-shadow:0 0 0 rgba(255,200,80,0)}30%{box-shadow:0 0 30px rgba(255,200,80,.55)}100%{box-shadow:0 0 8px rgba(255,200,80,.2)}}
-.footer{font-size:12px;opacity:.7;margin-top:6px}
-/* Christmas Lights */
-.christmas-lights{position:absolute;top:-10px;left:-10px;right:-10px;bottom:-10px;pointer-events:none;z-index:10}
-.light{position:absolute;width:12px;height:12px;border-radius:50%;box-shadow:0 0 6px #fff;animation:flicker 1.5s infinite;}
+@keyframes goldPulse{
+  0%{box-shadow:0 0 0 rgba(255,200,80,0)}
+  30%{box-shadow:0 0 30px rgba(255,200,80,.55)}
+  100%{box-shadow:0 0 8px rgba(255,200,80,.2)}
+}
+.snowflake{
+  position:absolute;
+  width:6px;
+  height:6px;
+  background:white;
+  border-radius:50%;
+  opacity:0.8;
+  animation:snowFall linear infinite;
+}
+@keyframes snowFall{
+  0%{transform:translateY(-100vh) rotate(0deg);opacity:0}
+  20%{opacity:0.9}
+  80%{opacity:0.9}
+  100%{transform:translateY(100vh) rotate(360deg);opacity:0}
+}
+.christmas-lights{position:absolute; inset:-10px; pointer-events:none; z-index:10}
+.light{
+  position:absolute;
+  width:12px;
+  height:12px;
+  border-radius:50%;
+  box-shadow:0 0 8px #fff;
+  animation:flicker 1.5s infinite;
+}
 @keyframes flicker{0%,100%{opacity:1}50%{opacity:0.3}}
-/* Snow effect on doors */
-@keyframes snowFall{0%{transform:translateY(-100%) rotate(0deg)}100%{transform:translateY(100%) rotate(360deg)}}
-.snowflake{position:absolute;top:0;left:0;width:6px;height:6px;background:white;border-radius:50%;opacity:0.8;animation:snowFall linear infinite;}
-/* Viewer */
-.viewer-gloss{box-shadow:0 0 50px rgba(0,0,0,0.6),0 0 80px rgba(255,255,255,0.12),inset 0 0 40px rgba(255,255,255,0.08);transition:transform 0.8s ease,opacity 0.6s ease}
+.footer{font-size:12px;opacity:.7;margin-top:6px}
+#viewer{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,0.9);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  z-index:9999;
+  perspective:1600px;
+  opacity:0;
+  transition:opacity 600ms ease;
+}
+.viewer-gloss{
+  max-width:90%;
+  max-height:90%;
+  border-radius:12px;
+  box-shadow:0 0 50px rgba(0,0,0,0.6),0 0 80px rgba(255,255,255,0.12);
+  transition:transform 0.8s ease;
+}
 </style>
 </head>
 <body>
 <div class="scene">
-<div class="calendar" id="calendar">
-<div class="christmas-lights" id="lights"></div>
-<div class="header">
-<div class="title">🎄 Advent Calendar 🎄</div>
-<div class="subtitle">Hover & tilt • Click a door to reveal</div>
+  <div class="calendar" id="calendar">
+    <div class="christmas-lights" id="lights"></div>
+    <div class="header">
+      <div class="title">🎄 Advent Calendar 🎄</div>
+      <div class="subtitle">Click door → Click picture for full view</div>
+    </div>
+    <div class="grid" id="grid"></div>
+    <div class="footer">Images: images/day1.jpg … day25.jpg (day 1 = test image)</div>
+  </div>
 </div>
-<div class="grid" id="grid"></div>
-<div class="footer">Put your images in /images/day1.jpg … /images/day25.jpg</div>
+
+<div id="viewer">
+  <img id="viewerImg" src="" class="viewer-gloss" style="opacity:0;transform:scale(1.2);">
 </div>
-</div>
+
 <script>
-const colors=['red','green','yellow','blue','orange','purple'];
-const lightsContainer=document.getElementById('lights');
-for(let i=0;i<50;i++){
- const light=document.createElement('div');
- light.className='light';
- light.style.background=colors[Math.floor(Math.random()*colors.length)];
- light.style.top=Math.random()*100+'%';
- light.style.left=Math.random()*100+'%';
- light.style.animationDelay=(Math.random()*2)+'s';
- lightsContainer.appendChild(light);
+const colors = ['#ff0000','#00ff00','#ffff00','#00ffff','#ff00ff','#ff8800'];
+const lightsContainer = document.getElementById('lights');
+for(let i=0;i<60;i++){
+  const light=document.createElement('div');
+  light.className='light';
+  light.style.background=colors[Math.floor(Math.random()*colors.length)];
+  light.style.top=Math.random()*100+'%';
+  light.style.left=Math.random()*100+'%';
+  light.style.animationDelay=(Math.random()*2)+'s';
+  lightsContainer.appendChild(light);
 }
+
+// Global falling snow
+const snowContainer = document.createElement('div');
+snowContainer.style.cssText = 'position:absolute;inset:0;pointer-events:none;z-index:20;';
+document.querySelector('.scene').appendChild(snowContainer);
+for(let i=0;i<100;i++){
+  const flake=document.createElement('div');
+  flake.className='snowflake';
+  flake.style.left=Math.random()*100+'%';
+  flake.style.animationDuration=(10+Math.random()*12)+'s';
+  flake.style.animationDelay=Math.random()*10+'s';
+  flake.style.opacity=Math.random()*0.6+0.3;
+  flake.style.width=(3+Math.random()*8)+'px';
+  flake.style.height=flake.style.width;
+  snowContainer.appendChild(flake);
+}
+
 const DAYS=25;
 const grid=document.getElementById('grid');
-for(let i=1;i<=DAYS;i++){
- const wrap=document.createElement('div');wrap.className='door-wrap';
- const door=document.createElement('div');door.className='door';door.tabIndex=0;
- door.setAttribute('data-day',i);
- const front=document.createElement('div');front.className='door-face door-front';
- front.innerHTML=`<div class='num'>${i}</div><div class='door-knob'></div>`;
- const back=document.createElement('div');back.className='door-face door-back';
- // Fix: show image behind door initially
- const img=document.createElement('img');
- img.src=(i===1)?'https://i.gyazo.com/2de23f75dcbf8cdf09e1735e47174869.png':`images/day${i}.jpg`;
- img.alt=`Day ${i}`;
- img.style.opacity='1';
- back.appendChild(img);
- // Add snowflake
- for(let s=0;s<5;s++){
-  const snow=document.createElement('div');snow.className='snowflake';
-  snow.style.left=Math.random()*100+'%';snow.style.animationDuration=(3+Math.random()*2)+'s';
-  back.appendChild(snow);
- }
- door.appendChild(front);door.appendChild(back);wrap.appendChild(door);grid.appendChild(wrap);
- let clickCount=0;
- function openDoor(){
-  clickCount++;
-  if(clickCount===1){
-   front.classList.add('glow');front.classList.add('glow-anim');door.classList.add('open');
-   setTimeout(()=>front.classList.remove('glow-anim'),1000);
-   if(i===25){
-    // Use public Christmas jingle
-    const audio=new Audio('https://www.soundjay.com/button/sounds/button-10.mp3');
-    audio.play();
-   }
-   return;
-  }
-  if(clickCount===2){
-   const viewer=document.getElementById('viewer');
-   const viewerImg=document.getElementById('viewerImg');
-   viewerImg.src=img.src;
-   viewer.style.display='flex';
-   requestAnimationFrame(()=>{viewer.style.opacity='1';viewerImg.style.opacity='1';viewerImg.style.transform='scale(1.25) rotateY(16deg) rotateX(6deg)';});
-   viewer.onmousemove=(ev)=>{
+const viewer=document.getElementById('viewer');
+const viewerImg=document.getElementById('viewerImg');
+
+function openViewer(src){
+  viewerImg.src = src;
+  viewer.style.display='flex';
+  requestAnimationFrame(()=>{
+    viewer.style.opacity='1';
+    viewerImg.style.opacity='1';
+    viewerImg.style.transform='scale(1.25) rotateY(16deg) rotateX(6deg)';
+  });
+  viewer.onmousemove = (e)=>{
     const r=viewer.getBoundingClientRect();
-    const px=(ev.clientX-r.left)/r.width;
-    const py=(ev.clientY-r.top)/r.height;
+    const px=(e.clientX-r.left)/r.width;
+    const py=(e.clientY-r.top)/r.height;
     const rotY=(px-0.5)*30;
     const rotX=(py-0.5)*-20;
     viewerImg.style.transform=`scale(1.25) rotateY(${rotY}deg) rotateX(${rotX}deg)`;
-   };
-   viewer.onclick=()=>{
-    viewer.style.opacity='0';viewerImg.style.opacity='0';
+  };
+  viewer.onclick = ()=>{
+    viewer.style.opacity='0';
+    viewerImg.style.opacity='0';
     setTimeout(()=>{viewer.style.display='none';},600);
-    viewer.onmousemove=null;viewer.onclick=null;clickCount=0;
-   };
-   return;
-  }
- }
- door.addEventListener('click',openDoor);
- door.addEventListener('keydown',(e)=>{if(e.key==='Enter'||e.key===' '){e.preventDefault();openDoor();}});
+    viewer.onmousemove=null;
+    viewer.onclick=null;
+  };
 }
+
+for(let i=1;i<=DAYS;i++){
+  const wrap=document.createElement('div');
+  wrap.className='door-wrap';
+
+  // revealed picture
+  const content=document.createElement('div');
+  content.className='door-content';
+  const img=document.createElement('img');
+  img.src = (i===1) ? 'https://i.gyazo.com/2de23f75dcbf8cdf09e1735e47174869.png' : `images/day${i}.jpg`;
+  img.alt=`Day ${i}`;
+  content.appendChild(img);
+
+  // snow on the picture
+  for(let s=0;s<8;s++){
+    const snow=document.createElement('div');
+    snow.className='snowflake';
+    snow.style.left=Math.random()*100+'%';
+    snow.style.animationDuration=(3+Math.random()*4)+'s';
+    snow.style.animationDelay=Math.random()*2+'s';
+    content.appendChild(snow);
+  }
+  wrap.appendChild(content);
+
+  // the swinging door
+  const door=document.createElement('div');
+  door.className='door';
+  door.setAttribute('data-day',i);
+  const front=document.createElement('div');
+  front.className='door-front';
+  front.innerHTML=`<div class="num">${i}</div><div class="door-knob"></div>`;
+  door.appendChild(front);
+  wrap.appendChild(door);
+  grid.appendChild(wrap);
+
+  // CLICK TO OPEN DOOR
+  door.addEventListener('click', ()=>{
+    if(door.classList.contains('open')) return; // already open
+
+    wrap.classList.add('open');    // fades in the picture
+    door.classList.add('open');     // swings the door open
+    front.classList.add('glow');
+    front.classList.add('glow-anim');
+    setTimeout(()=>front.classList.remove('glow-anim'),1000);
+
+    if(i===25){
+      const audio = new Audio('https://www.soundjay.com/misc/sounds/bell-ringing-05.mp3');
+      audio.play();
+    }
+  });
+
+  // click picture → big viewer
+  content.addEventListener('click',(e)=>{
+    e.stopPropagation();
+    openViewer(img.src);
+  });
+
+  // keyboard support
+  door.tabIndex = 0;
+  door.addEventListener('keydown',(e)=>{
+    if(e.key==='Enter' || e.key===' '){
+      e.preventDefault();
+      door.click();
+    }
+  });
+}
+
+// tilt whole calendar on mouse move
 const scene=document.querySelector('.scene');
 const calendar=document.getElementById('calendar');
 scene.addEventListener('mousemove',(e)=>{
- const r=scene.getBoundingClientRect();
- const px=(e.clientX-r.left)/r.width;
- const py=(e.clientY-r.top)/r.height;
- const rotY=(px-.5)*18; const rotX=(py-.5)*-12;
- calendar.style.transform=`rotateX(${rotX}deg) rotateY(${rotY}deg)`;
+  const r=scene.getBoundingClientRect();
+  const px=(e.clientX-r.left)/r.width;
+  const py=(e.clientY-r.top)/r.height;
+  const rotY=(px-0.5)*18;
+  const rotX=(py-0.5)*-12;
+  calendar.style.transform=`rotateX(${rotX}deg) rotateY(${rotY}deg)`;
 });
-scene.addEventListener('mouseleave',()=>{calendar.style.transform='rotateX(0deg) rotateY(0deg)';});
+scene.addEventListener('mouseleave',()=>{calendar.style.transform='';});
 </script>
-<div id="viewer" style="position:fixed;inset:0;background:rgba(0,0,0,0.85);display:none;align-items:center;justify-content:center;z-index:9999;perspective:1600px;opacity:0;transition:opacity 600ms ease;">
-<img id="viewerImg" src="" class="viewer-gloss" style="max-width:90%;max-height:90%;transform:rotateY(0deg) rotateX(0deg) scale(1);transition:transform 0.8s ease, box-shadow 0.6s ease, opacity 0.6s ease;box-shadow:0 0 50px rgba(0,0,0,0.6);border-radius:12px;opacity:0;" />
-</div>
 </body>
 </html>
